Pricing section mobile size fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,18 +157,18 @@ h2{
 
 #cta{
   background-color: #ff4c68;
-  font-family: 'Montserrat', sans-serif;
   text-align: center;
-  padding: 7% 0;
+  padding: 7% 15%;
   }
 
 .cta-h3{
   color: #fff;
+  font-family: 'Montserrat', sans-serif;
   font-size: 3.5rem;
-  width: 70%;
   margin: 0 auto;
   margin-bottom: 5%;
-  font-weight: bolder;
+  font-weight: bold;
+  line-height: 1.5;
   margin-top: 5%;
 }
 
@@ -178,7 +178,7 @@ h2{
 
 #footer{
   text-align: center;
-  padding: 7%;
+  padding: 7% 15%;
   font-size: 1rem;
 }
 
@@ -193,6 +193,10 @@ h2{
 
   #title{
     text-align: center;
+  }
+
+  #pricing{
+    padding: 40px;
   }
 
   .iphone6{
